PR/51706: Amir Plivatsky: Fix memory leak